--- a/build.gradle
+++ b/build.gradle
@@ -50,9 +50,9 @@ repositories {
 dependencies {
 	testCompile 'org.mockito:mockito-junit-jupiter:3.3.3'
 	testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-
+    // testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    // testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
 }
 
 test { ///Please do not change this
