--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,8 @@ repositories {
 dependencies {
 	testCompile 'org.mockito:mockito-junit-jupiter:3.3.3'
 	testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
-    // testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
-    // testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     
 }
 
